Hice un nuevo cambio de prueba en el html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		  	<h4>Rafaela Valdéz</h4>
 		  	<h5>Data scientis, phD Theoriccal Physics, Carneige Mellon University</h5>
 		  	<p>En esta charla revisaremos las técnicas y tecnologías que hacen que sea económico 
-			hacer frente a los datos de una escala extrema.</p>
+			hacer frente a los datos de una escala extrema</p>
 			</div>
 		</div>
 	</section>
